WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145475
Missing #import of Platform.h in several WTF headers
https://bugs.webkit.org/show_bug.cgi?id=145475
Summary
Missing #import of Platform.h in several WTF headers
Anders Carlsson
Reported
2015-05-29 15:11:12 PDT
Missing #import of Platform.h in several WTF headers
Attachments
Patch
(1.46 KB, patch)
2015-05-29 15:11 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-05-29 15:11:59 PDT
Created
attachment 253924
[details]
Patch
Anders Carlsson
Comment 2
2015-05-29 15:15:57 PDT
Committed
r185009
: <
http://trac.webkit.org/changeset/185009
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug