Missing #import of Platform.h in several WTF headers https://bugs.webkit.org/show_bug.cgi?id=145475 rdar://problem/21161818

Reviewed by Darin Adler.

Add Platform.h #includes.

* wtf/Assertions.h:
* wtf/RetainPtr.h:

Canonical link: https://commits.webkit.org/163509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185009 268f45cc-cd09-0410-ab3c-d52691b4dbfc